# sepdpc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sepdpc/: __main__.py  repository.py
tests/: test_repository.py
