[tool.poetry]
name = "sepdpc"
version = "0.1.0"
description = ""
authors = ["Arne Ottens <arne.ottens@starburst.io>"]
readme = "README.md"
packages = [{include = "sepdpc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
